--- a/doc/developer.tex
+++ b/doc/developer.tex
@@ -284,6 +284,8 @@ In \cref{eqn:force_loc3}, we again choose not to compute the gradient for $V_{\t
 
 In DGDFT, the efficient way to evaluate the nonlocal contribution is through the reduced density matrix. This is documented in \cite[Eq. (29)]{ZhangLinHuEtAl2017}.
 
+\section{Programming}
+
 \bibliographystyle{abbrv}
 \bibliography{developer}
 
